Fix sonar findings